--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.73.2",
     "react-native-collapsible": "^1.6.1",
     "react-native-linear-gradient": "^2.8.3",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
