--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/react-native": "^5.0.5",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@types/react": "~18.2.45",
@@ -20,9 +21,9 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-collapsible": "^1.6.1",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-linear-gradient": "^2.8.3",
-    "typescript": "^5.3.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
